find in system's path and sudo's path

BUG: 462127


(cherry picked from commit 50eee7e0f1089b72606afd4400e91ab963a8b7e0)